--- a/src/pages/addGig/addGig.css
+++ b/src/pages/addGig/addGig.css
@@ -35,7 +35,7 @@
 }
 .AddService-form {
 	width: 805px !important;
-	/* height: 975px; */
+	height: 50.5rem;
 	/* height: 920px; */
 	/* margin: 15px 0; */
 	margin-bottom: 15px;
